src/test/testData/kubernetes/KUBE001/deployment.yaml.denied
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: nginx
        securityContext:
          runAsNonRoot: <error descr="Container runs as root or can gain root privileges.">false</error>
          runAsGroup: 2000
        image: nginx:1.14.2
        ports:
        - containerPort: 80
      - name: nginx2
        securityContext:
          runAsGroup: <error descr="Container runs as root or can gain root privileges.">0</error>
        image: nginx:1.14.2
        ports:
        - containerPort: 80